--- a/EducationPlatform/Views/A_Institution/Index.cshtml
+++ b/EducationPlatform/Views/A_Institution/Index.cshtml
@@ -8,9 +8,12 @@
 <a href="~/A_Mentor/MentorAdd" class="btn btn-primary">Add Mentor</a>
 <a href="~/A_Mentor/MentorList" class="btn btn-primary">Mentor List</a>
 <a href="~/A_Institution/InstitutionNotice" class="btn btn-primary">Post Notice</a>
+<a href="~/A_Institution/InstitutionSeeNotice" class="btn btn-primary">See Notice</a>
+
 <a href="~/A_Student/InstitutionStudentList" class="btn btn-primary">See Students & Transactions</a>
-<a href="~/A_Institution/InstitutionOfferedCourse" class="btn btn-primary">Offered Course</a>
+<a href="~/A_Institution/InstitutionOfferedCourse" class="btn btn-primary">Offer Course</a>
 <a href="~/A_Institution/InstitutionSalesReport" class="btn btn-primary">Sales Report</a>
+
 
 
 
