--- a/EducationPlatform/Views/A_Institution/InstitutionInformation.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionInformation.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "InstitutionInformation";
 }
 
-<h2>InstitutionInformation</h2>
+<h2>Institution Information</h2>
 
 <table class="table">
     <thead class="thead-dark">
@@ -39,6 +39,7 @@
                     <a class="btn btn-primary" href="~/A_Institution/InstitutionDelete/@Model.Id" role="button">Delete</a>
                     <a class="btn btn-primary" href="~/A_Institution/InstitutionUpdate/@Model.Id" role="button">Update Details</a>
                     <a href="~/A_Institution/InstitutionStudentResult/@Model.Id" class="btn btn-primary">See Result</a>
+                    <a href="~/A_Institution/InstitutionInformationDownload/@Model.Id" class="btn btn-primary">Download Information</a>
                 </td>
             </tr>
         
