--- a/EducationPlatform/Views/A_Institution/InstitutionOfferedCourse.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionOfferedCourse.cshtml
@@ -5,15 +5,19 @@
 
 <h2>Institution Offered Course</h2>
 <form action="" method="post">
-
+    <a href="~/A_Institution/InstitutionViewOfferedCourse" class="btn btn-primary">View Offered Courses</a>
+    <h4>Institution Id</h4>  <input type="text" value="@(Model != null ? Model.InsttutionId:"")" name="InstitutionId" class=" form-control" />
     <h4>Name</h4>  <input type="text" value="@(Model!= null ? Model.Name:"")" name="Name" class="form-control" />
 
     <h4>Details</h4>  <input type="text" value="@(Model!= null ? Model.Details:"")" name="Details" class="form-control" />
 
     <h4>Price</h4>  <input type="text" value="@(Model != null ? Model.Price:"")" name="Price" class=" form-control" />
     <h4>Duration</h4>  <input type="text" value="@(Model != null ? Model.Duration:"")" name="Duration" class=" form-control" />
+    <h4>Date</h4>  <input type="date" value="@(Model != null ? Model.Date:"")" name="Date" class=" form-control" />
+    <h4>Mentor Id</h4>  <input type="text" value="@(Model != null ? Model.MentorId:"")" name="MentorId" class=" form-control" />
     <h4>Photo</h4>  <input type="text" value="@(Model != null ? Model.Photo:"")" name="Photo" class=" form-control" />
-    
+
+
     <br />
     <button type="submit">Submit</button>
 </form>
