--- a/EducationPlatform/Views/A_Institution/InstitutionStudentCertificate.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionStudentCertificate.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "InstitutionStudentCertificate";
 }
 
-<h2>InstitutionStudentCertificate</h2>
+<h2>Institution Student Certificate</h2>
 
 <table class="table table-sm">
     <thead>
