--- a/EducationPlatform/Views/A_Institution/Index.cshtml
+++ b/EducationPlatform/Views/A_Institution/Index.cshtml
@@ -2,18 +2,33 @@
 @{
     ViewBag.Title = "Index";
 }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
 
-<h2>Index</h2>
-<a href="~/A_Institution/InstitutionInformation" class="btn btn-primary">Information </a>
-<a href="~/A_Mentor/MentorAdd" class="btn btn-primary">Add Mentor</a>
-<a href="~/A_Mentor/MentorList" class="btn btn-primary">Mentor List</a>
-<a href="~/A_Institution/InstitutionNotice" class="btn btn-primary">Post Notice</a>
-<a href="~/A_Institution/InstitutionSeeNotice" class="btn btn-primary">See Notice</a>
+            <h2>Index</h2>
+            <br />
+            <a href="~/A_Institution/InstitutionInformation" class="btn btn-primary">Information </a>
+            <a href="~/A_Mentor/MentorAdd" class="btn btn-secondary">Add Mentor</a>
+            <a href="~/A_Mentor/MentorList" class="btn btn-secondary">Mentor List</a>
+            <a href="~/A_Institution/InstitutionNotice" class="btn btn-info">Post Notice</a>
+            <a href="~/A_Institution/InstitutionSeeNotice" class="btn btn-info">See Notice</a>
 
-<a href="~/A_Student/InstitutionStudentList" class="btn btn-primary">See Students & Transactions</a>
-<a href="~/A_Institution/InstitutionOfferedCourse" class="btn btn-primary">Offer Course</a>
-<a href="~/A_Institution/InstitutionSalesReport" class="btn btn-primary">Sales Report</a>
+            <a href="~/A_Student/InstitutionStudentList" class="btn btn-success">See Students & Transactions</a>
+            <a href="~/A_Institution/InstitutionOfferedCourse" class="btn btn-warning">Offer Course</a>
+            <a href="~/A_Institution/InstitutionSalesReport" class="btn btn-primary">Sales Report</a>
 
-
+        </center>
+        </header>
+    </body>
+</html>
 
 
