--- a/EducationPlatform/Views/A_Institution/InstitutionInformation.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionInformation.cshtml
@@ -2,51 +2,66 @@
 @{
     ViewBag.Title = "InstitutionInformation";
 }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
 
-<h2>Institution Information</h2>
+            <h2>Institution Information</h2>
 
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Name</th>
-            <th scope="col">Address</th>
-            <th scope="col">Email</th>
-            <th scope="col">Phone</th>
-            <th scope="col">Password</th>
-            <th scope="col">Website Link</th>
-            <th scope="col">Status</th>
-            <th scope="col">Photo</th>
-        </tr>
-    </thead>
-    <tbody>
-       
-
-            <tr>
-                <th scope="row">@Model.Id</th>
-                <td>@Model.Name</td>
-                <td>@Model.Address</td>
-                <td>@Model.Email</td>
-                <td>@Model.Phone</td>
-                <td>@Model.Password</td>
-                <td>@Model.WebsiteLink</td>
-                <td>@Model.IsValid</td>
-                <td>@Model.Photo</td>
-                <td>
-
-                    
-
-                    <a class="btn btn-primary" href="~/A_Institution/InstitutionDelete/@Model.Id" role="button">Delete</a>
-                    <a class="btn btn-primary" href="~/A_Institution/InstitutionUpdate/@Model.Id" role="button">Update Details</a>
-                    <a href="~/A_Institution/InstitutionStudentResult/@Model.Id" class="btn btn-primary">See Result</a>
-                    <a href="~/A_Institution/InstitutionInformationDownload/@Model.Id" class="btn btn-primary">Download Information</a>
-                </td>
-            </tr>
-        
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Id</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Address</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Phone</th>
+                        <th scope="col">Password</th>
+                        <th scope="col">Website Link</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Photo</th>
+                    </tr>
+                </thead>
+                <tbody>
 
 
-    </tbody>
+                    <tr>
+                        <th scope="row">@Model.Id</th>
+                        <td>@Model.Name</td>
+                        <td>@Model.Address</td>
+                        <td>@Model.Email</td>
+                        <td>@Model.Phone</td>
+                        <td>@Model.Password</td>
+                        <td>@Model.WebsiteLink</td>
+                        <td>@Model.IsValid</td>
+                        <td>@Model.Photo</td>
+                        <td>
 
-</table>
 
 
+                            <a class="btn btn-danger" href="~/A_Institution/InstitutionDelete/@Model.Id" role="button">Delete</a>
+                            <a class="btn btn-warning" href="~/A_Institution/InstitutionUpdate/@Model.Id" role="button">Update Details</a>
+                            <a href="~/A_Institution/InstitutionStudentResult/@Model.Id" class="btn btn-primary">See Result</a>
+                            <a href="~/A_Institution/InstitutionInformationDownload/@Model.Id" class="btn btn-dark">Download Information</a>
+                        </td>
+                    </tr>
+
+
+
+                </tbody>
+
+            </table>
+        </center>
+
+    </header>
+</body>
+
+</html>
