--- a/EducationPlatform/Views/A_Institution/InstitutionNotice.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionNotice.cshtml
@@ -3,13 +3,37 @@
     ViewBag.Title = "InstitutionNotice";
 }
 
-<h2>Institution Notice</h2>
-<form action="" method="post">
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Admin Login</title>
+</head>
+<body>
+    <header>
+        <center>
 
-    <input type="text" name="Details" value="" class="form-control" placeholder="DETAILS" />
-    <input type="date" name="Date" value="" class="form-control" placeholder="DATE" />
 
-    <button type="submit" class="btn btn-success">Submit</button>
+            <h2>Institution Notice</h2>
+            <br />
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                <form action="" method="post">
 
-</form>
+                    <input type="text" name="Details" value="" class="form-control" placeholder="DETAILS" />
+                    <br />
+                    <input type="date" name="Date" value="" class="form-control" placeholder="DATE" />
+                    <br />
+                    <button type="submit" class="btn btn-success">Submit</button>
+
+                </form>
+            </div>
+            <div class="col-lg-4"></div>
+        </center>
+        </header>
+    </body>
+</html>
+
 
