--- a/EducationPlatform/Views/A_Institution/InstitutionOfferedCourse.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionOfferedCourse.cshtml
@@ -2,23 +2,52 @@
 @{
     ViewBag.Title = "InstitutionOfferedCourse";
 }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
 
-<h2>Institution Offered Course</h2>
-<form action="" method="post">
-    <a href="~/A_Institution/InstitutionViewOfferedCourse" class="btn btn-primary">View Offered Courses</a>
-    <h4>Institution Id</h4>  <input type="text" value="@(Model != null ? Model.InsttutionId:"")" name="InstitutionId" class=" form-control" />
-    <h4>Name</h4>  <input type="text" value="@(Model!= null ? Model.Name:"")" name="Name" class="form-control" />
+            <h2>Institution Offered Course</h2>
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6">
+                <form action="" method="post">
+                    <br />
+                    <a href="~/A_Institution/InstitutionViewOfferedCourse" class="btn btn-primary">View Offered Courses</a>
+                    <br />
+                    <h4>Institution Id</h4>  <input type="text" value="@(Model != null ? Model.InsttutionId:"")" name="InstitutionId" 
+                                                    class=" form-control" placeholder="Institution Id"/>
+                    <h4>Name</h4>  <input type="text" value="@(Model!= null ? Model.Name:"")" name="Name" 
+                                          class="form-control" placeholder="Name"  />
 
-    <h4>Details</h4>  <input type="text" value="@(Model!= null ? Model.Details:"")" name="Details" class="form-control" />
+                    <h4>Course Details</h4>  <input type="text" value="@(Model!= null ? Model.Details:"")" name="Details" 
+                                                    class="form-control" placeholder="Details" />
 
-    <h4>Price</h4>  <input type="text" value="@(Model != null ? Model.Price:"")" name="Price" class=" form-control" />
-    <h4>Duration</h4>  <input type="text" value="@(Model != null ? Model.Duration:"")" name="Duration" class=" form-control" />
-    <h4>Date</h4>  <input type="date" value="@(Model != null ? Model.Date:"")" name="Date" class=" form-control" />
-    <h4>Mentor Id</h4>  <input type="text" value="@(Model != null ? Model.MentorId:"")" name="MentorId" class=" form-control" />
-    <h4>Photo</h4>  <input type="text" value="@(Model != null ? Model.Photo:"")" name="Photo" class=" form-control" />
+                    <h4>Course Fee</h4>  <input type="text" value="@(Model != null ? Model.Price:"")" name="Price" 
+                                                class=" form-control" placeholder="Price" />
+                    <h4>Duration</h4>  <input type="text" value="@(Model != null ? Model.Duration:"")" name="Duration"
+                                              class=" form-control"  placeholder="Duration"/>
+                    <h4>Date</h4>  <input type="date" value="@(Model != null ? Model.Date:"")" name="Date" 
+                                          class=" form-control" placeholder="Date" />
+                    <h4>Mentor Id</h4>  <input type="text" value="@(Model != null ? Model.MentorId:"")" name="MentorId" 
+                                               class=" form-control" placeholder="Mentor Id"/>
+                    <h4>Photo</h4>  <input type="text" value="@(Model != null ? Model.Photo:"")" name="Photo" 
+                                           class=" form-control" placeholder="Photo" />
 
 
-    <br />
-    <button type="submit">Submit</button>
-</form>
+                    <br />
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </form>
+            </div>
+            <div class="col-lg-3"></div>
+        </center>
+        </header>
+    </body>
+</html>
 
