--- a/EducationPlatform/Views/A_Institution/InstitutionSalesReport.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionSalesReport.cshtml
@@ -2,31 +2,45 @@
 @{
     ViewBag.Title = "InstitutionSalesReport";
 }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Admin Login</title>
+</head>
+<body>
+    <header>
 
-<h2>Institution Sales Report</h2>
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Total Sold Courses</th>
-            <th scope="col">Total Selling</th>
-           
-            <th scope="col">Institution Earning</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            
-            <td>@ViewBag.varsityName</td>
-            <td>@ViewBag.totalSellingCourse</td>
-            <td>@ViewBag.sellingAmount BDT</td>
-            
-            <td>@ViewBag.varsityEarning BDT</td>
-           
-        </tr>
-       
-    </tbody>
-</table>
+        <h2>Institution Sales Report</h2>
+        <br />
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Total Sold Courses</th>
+                    <th scope="col">Total Selling</th>
+
+                    <th scope="col">Institution Earning</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+
+                    <td>@ViewBag.varsityName</td>
+                    <td>@ViewBag.totalSellingCourse</td>
+                    <td>@ViewBag.sellingAmount BDT</td>
+
+                    <td>@ViewBag.varsityEarning BDT</td>
+
+                </tr>
+
+            </tbody>
+        </table>
+        </header>
+    </body>
+</html>
 
 
-    
+
