--- a/EducationPlatform/Views/A_Institution/InstitutionSeeNotice.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionSeeNotice.cshtml
@@ -2,40 +2,56 @@
 @{
     ViewBag.Title = "InstitutionSeeNotice";
 }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
+            <h2>Institution See Notice</h2>
+            <br />
 
-<h2>Institution See Notice</h2>
-    
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th>Notice Id</th>
-            <th scope="col">Date</th>
-            <th scope="col">Details</th>
-       
-        </tr>
-    </thead>
-    <tbody>
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Notice Id</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Details</th>
 
-
-
-        @foreach (var i in Model)
-        {
-            <tr>
-                <td>@i.Id</td>
-                <td>@i.Date</td>
-                <td>@i.Details</td>
-
-                <td>
-                    <a href="~/A_Institution/InstitutionUpdateNotice/@i.Id" class="btn btn-primary">Update Notice</a>
-                </td>
-
-            </tr>
+                    </tr>
+                </thead>
+                <tbody>
 
 
-        }
 
-       
-    </tbody>
+                    @foreach (var i in Model)
+                    {
+                        <tr>
+                            <td>@i.Id</td>
+                            <td>@i.Date</td>
+                            <td>@i.Details</td>
 
-</table>
+                            <td>
+                                <a href="~/A_Institution/InstitutionUpdateNotice/@i.Id" class="btn btn-info">Update Notice</a>
+                            </td>
+
+                        </tr>
+
+
+                    }
+
+
+                </tbody>
+
+            </table>
+        </center>
+
+    </header>
+    </body>
+</html>
 
