--- a/EducationPlatform/Views/A_Institution/InstitutionStudentCertificate.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionStudentCertificate.cshtml
@@ -3,52 +3,68 @@
     ViewBag.Title = "InstitutionStudentCertificate";
 }
 
-<h2>Institution Student Certificate</h2>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
 
-<table class="table table-sm">
-    <thead>
-        <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Applier Id</th>
-            <th scope="col">Course Id</th>
-            <th scope="col">Status</th>
-            
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var i in Model)
-        {
-            <tr>
-                <th scope="row">@i.Id</th>
-               
-               
-                <td>@i.ApplierId</td>
-                <td>@i.CourseId</td>
-                <td>@i.Status</td>
-                <td>
-                    @{ if (i.Status == "Applied by Student")
-                        {
 
-                            <a href="~/A_Institution/InstitutionStudentCertificateRecommendation/
+        <br />
+        <h2>Institution Student Certificate</h2>
+
+        <table class="table table-sm">
+            <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Applier Id</th>
+                    <th scope="col">Course Id</th>
+                    <th scope="col">Status</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var i in Model)
+                {
+                    <tr>
+                        <th scope="row">@i.Id</th>
+
+
+                        <td>@i.ApplierId</td>
+                        <td>@i.CourseId</td>
+                        <td>@i.Status</td>
+                        <td>
+                            @{ if (i.Status == "Applied by Student")
+                                {
+
+                                    <a href="~/A_Institution/InstitutionStudentCertificateRecommendation/
                                @i.Id" class="btn btn-primary">Recommend Certificate</a>
 
-                        }
-                        else
-                        {
+                                }
+                                else
+                                {
 
-                            <a href="~/A_Institution/InstitutionStudentCertificateRecommendation/
+                                    <a href="~/A_Institution/InstitutionStudentCertificateRecommendation/
                                @i.Id" class="btn btn-primary disabled">Recommend Certificate</a>
 
+                                }
                             }
-                        }
 
-                    </td>
-                
-            </tr>
+                        </td>
 
-        }
-        
+                    </tr>
 
-        </tbody>
-</table>
+                }
+
+
+            </tbody>
+        </table>
+        </header>
+    </body>
+</html>
 
