--- a/EducationPlatform/Views/A_Institution/InstitutionStudentResult.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionStudentResult.cshtml
@@ -3,35 +3,47 @@
     ViewBag.Title = "InstitutionStudentResult";
 }
 
-<h2>Institution Student Result</h2>
 
 
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">Student Id</th>
-            <th scope="col">Course Name</th>
-            <th scope="col">Marks</th>
-            <th scope="col">Date</th>
-            <th scope="col">Return/Not Return</th>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
+            <h2>Institution Student Result</h2>
 
-          
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var p in Model)
-        {
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Student Id</th>
+                        <th scope="col">Course Name</th>
+                        <th scope="col">Marks</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Return/Not Return</th>
 
-            <tr>
-                <th scope="row">@p.StudentId</th>
-                <td>@p.CourseName</td>
-                
-                <td>@p.Mark</td>
-                <td>@p.Date</td>
-                <td>
-                    @p.BackAnswer
-                    
-                    <br />
+
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var p in Model)
+                    {
+
+                        <tr>
+                            <th scope="row">@p.StudentId</th>
+                            <td>@p.CourseName</td>
+
+                            <td>@p.Mark</td>
+                            <td>@p.Date</td>
+                            <td>
+                                @p.BackAnswer
+
+                                <br />
 
                                 <a class="btn btn-primary" href="~/A_Institution/InstitutionStudentReturnResult/@p.Id" role="button">RETURN RESULT</a>
                                 <a class="btn btn-warning" href="~/A_Institution/InstitutionStudentNotReturnResult/@p.Id" role="button">NOT RETURN RESULT</a>
@@ -40,15 +52,20 @@
 
 
 
-              
-              
-               
-            </tr>
-        }
 
 
-    </tbody>
 
-</table>
+                        </tr>
+                    }
+
+
+                </tbody>
+
+            </table>
+        </center>
+    </header>
+   
+</body>
+</html>
 
 
