--- a/EducationPlatform/Views/A_Institution/InstitutionUpdate.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionUpdate.cshtml
@@ -2,20 +2,40 @@
 @{
     ViewBag.Title = "InstitutionUpdate";
 }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
 
-<h2>InstitutionUpdate</h2>
-<form action="" method="post">
+            <h1>InstitutionUpdate</h1>
+            <br />
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                <form action="" method="post">
 
-    <h4>Name</h4>  <input type="text" value="@(Model!= null ? Model.Name:"")" name="Name" class="form-control" />
+                    <h4>Name</h4>  <input type="text" value="@(Model!= null ? Model.Name:"")" name="Name" class="form-control" />
 
-    <h4>Address</h4>  <input type="text" value="@(Model!= null ? Model.Address:"")" name="Address" class="form-control" />
+                    <h4>Address</h4>  <input type="text" value="@(Model!= null ? Model.Address:"")" name="Address" class="form-control" />
 
-    <h4>Email</h4>  <input type="email" value="@(Model != null ? Model.Email:" ")" name="Email" class=" form-control" />
-    <h4>Phone</h4>  <input type="text" value="@(Model != null ? Model.Phone:" ")" name="Phone" class=" form-control" />
-    <h4>Password</h4>  <input type="password" value="@(Model != null ? Model.Password:" ")" name="Password" class=" form-control" />
-    <h4>Website Link</h4>  <input type="url" value="@(Model != null ? Model.WebsiteLink:" ")" name="WebsiteLink" class=" form-control" />
-    <br />
-    <button type="submit">Submit</button>
-</form>
+                    <h4>Email</h4>  <input type="email" value="@(Model != null ? Model.Email:" ")" name="Email" class=" form-control" />
+                    <h4>Phone</h4>  <input type="text" value="@(Model != null ? Model.Phone:" ")" name="Phone" class=" form-control" />
+                    <h4>Password</h4>  <input type="password" value="@(Model != null ? Model.Password:" ")" name="Password" class=" form-control" />
+                    <h4>Website Link</h4>  <input type="url" value="@(Model != null ? Model.WebsiteLink:" ")" name="WebsiteLink" class=" form-control" />
+                    <br />
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </form>
+            </div>
+            <div class="col-lg-4"></div>
+        </center>
+        </header>
+    </body>
+</html>
 
 
