--- a/EducationPlatform/Views/A_Institution/InstitutionUpdateNotice.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionUpdateNotice.cshtml
@@ -2,16 +2,37 @@
 @{
     ViewBag.Title = "InstitutionUpdateNotice";
 }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
+            <br />
+            <h2>Institution Update Notice</h2>
+            <br />
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                <form action="" method="post">
 
-<h2>Institution Update Notice</h2>
-<form action="" method="post">
 
+                    <h5>Details</h5><input type="text" name="Details" value="@Model.Details" class="form-control" placeholder="DETAILS" />
+                    <h5>Date</h5><input type="date" name="Date" value="@Model.Date" class="form-control" placeholder="DATE" />
 
-    <input type="text" name="Details" value="@Model.Details" class="form-control" placeholder="DETAILS" />
-    <input type="date" name="Date" value="@Model.Date" class="form-control" placeholder="DATE" />
+                    <br />
+                    <button type="submit" class="btn btn-success">Submit</button>
 
-    <button type="submit" class="btn btn-success">Submit</button>
-
-</form>
+                </form>
+            </div>
+            <div class="col-lg-4"></div>
+        </center>
+        </header>
+    </body>
+</html>
 
 
