--- a/EducationPlatform/Views/A_Institution/InstitutionUpdateOfferedCourse.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionUpdateOfferedCourse.cshtml
@@ -3,20 +3,40 @@
     ViewBag.Title = "InstitutionUpdateOfferedCourse";
 }
 
-<h2>Institution Update Offered Course</h2>
-<form action="" method="post">
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
+            <h2>Institution Update Offered Course</h2>
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6">
+                <form action="" method="post">
 
 
-    <input type="text" name="Name" value="@Model.Name" class="form-control" placeholder="Namw" />
-    <input type="text" name="Details" value="@Model.Details" class="form-control" placeholder="DETAILS" />
-    <input type="text" name="Price" value="@Model.Price" class="form-control" placeholder="Price" />
-    <input type="text" name="Duration" value="@Model.Duration" class="form-control" placeholder="Duration" />
-    <input type="date" name="Date" value="@Model.Date" class="form-control" placeholder="Date" />
-    <input type="text" name="MentorId" value="@Model.MentorId" class="form-control" placeholder="Mentor Id" />
-    <input type="text" name="Photo" value="@Model.Photo" class="form-control" placeholder="Photo" />
-    <input type="text" name="InstitutionId" value="@Model.InstitutionId" class="form-control" placeholder="Institution Id" />
+                   <h5>Course Name</h5> <input type="text" name="Name" value="@Model.Name" class="form-control" placeholder="Course Name" />
+                   <h5>Course Details</h5> <input type="text" name="Details" value="@Model.Details" class="form-control" placeholder="Details" />
+                   <h5>Course Fee</h5><input type="text" name="Price" value="@Model.Price" class="form-control" placeholder="Price" />
+                   <h5>Course Duration</h5><input type="text" name="Duration" value="@Model.Duration" class="form-control" placeholder="Duration" />
+                   <h5>Date</h5><input type="date" name="Date" value="@Model.Date" class="form-control" placeholder="Date" />
+                  <h5>Mentor Id</h5><input type="text" name="MentorId" value="@Model.MentorId" class="form-control" placeholder="Mentor Id" />
+                  <h5>Photo</h5><input type="text" name="Photo" value="@Model.Photo" class="form-control" placeholder="Photo" />
+                  <h5>Institution Id</h5><input type="text" name="InstitutionId" value="@Model.InstitutionId" class="form-control" placeholder="Institution Id" />
+                    <br />
+                    <button type="submit" class="btn btn-success" class="btn btn-success">Submit</button>
 
-    <button type="submit" class="btn btn-success">Submit</button>
+                </form>
+            </div>
+            <div class="col-lg-3"></div>
 
-</form>
+        </center>
+</header>
+    </body>
+</html>
 
