--- a/EducationPlatform/Views/A_Institution/InstitutionViewOfferedCourse.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionViewOfferedCourse.cshtml
@@ -2,47 +2,64 @@
 @{
     ViewBag.Title = "InstitutionViewOfferedCourse";
 }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <br />
 
-<h2>Institution View Offered Course</h2>
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Institution ID</th>
-            <th scope="col">Course Name</th>
-            <th scope="col">Course Details</th>
-            <th scope="col">Course Fee</th>
-            <th scope="col">Course Duration</th>
-            <th scope="col">Date</th>
-            <th scope="col">Mentor Id</th>
-            <th scope="col">Photo</th>
-
-
-        </tr>
-    </thead>
-    <tbody>
-
-
-
-        @foreach (var i in Model)
-        {
-            <tr>
-                <td>@i.Id</td>
-                <td>@i.InstitutionId</td>
-                <td>@i.Name</td>
-                <td>@i.Details</td>
-                <td>@i.Price</td>
-                <td>@i.Duration</td>
-                <td>@i.Date</td>
-                <td>@i.MentorId</td>
-                <td>@i.Photo</td>
-
-                <td>
-                    <a href="~/A_Institution/InstitutionUpdateOfferedCourse/@i.Id" class="btn btn-primary">Update Course</a>
-                </td>
-
-            </tr>
+        <h2>Institution View Offered Course</h2>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Institution ID</th>
+                    <th scope="col">Course Name</th>
+                    <th scope="col">Course Details</th>
+                    <th scope="col">Course Fee</th>
+                    <th scope="col">Course Duration</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Mentor Id</th>
+                    <th scope="col">Photo</th>
 
 
-        }
+                </tr>
+            </thead>
+            <tbody>
+
+
+
+                @foreach (var i in Model)
+                {
+                    <tr>
+                        <td>@i.Id</td>
+                        <td>@i.InstitutionId</td>
+                        <td>@i.Name</td>
+                        <td>@i.Details</td>
+                        <td>@i.Price</td>
+                        <td>@i.Duration</td>
+                        <td>@i.Date</td>
+                        <td>@i.MentorId</td>
+                        <td>@i.Photo</td>
+
+                        <td>
+                            <a href="~/A_Institution/InstitutionUpdateOfferedCourse/@i.Id" class="btn btn-info">Update Course</a>
+                        </td>
+
+                    </tr>
+
+
+                }
+            </tbody>
+        </table>
+</header>
+    </body>
+</html>
+
 
