--- a/EducationPlatform/Views/A_Institution/LogIn.cshtml
+++ b/EducationPlatform/Views/A_Institution/LogIn.cshtml
@@ -2,19 +2,40 @@
 @{
     ViewBag.Title = "LogIn";
 }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
 
-<h2>Log In</h2>
-<form action="" method="post">
+            <h2>Log In</h2>
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                <form action="" method="post">
 
 
 
-    <h4>Email</h4>  <input type="email" value="@(Model != null ? Model.Email:"")" name="Email" class=" form-control" />
+                    <h4>Email</h4>  <input type="email" value="@(Model != null ? Model.Email:"")"
+                                           name="Email" class=" form-control" placeholder="Email" />
+                    <br />
 
-    <h4>Password</h4>  <input type="password" name="Password" class=" form-control" />
+                    <h4>Password</h4>  <input type="password" name="Password" class=" form-control"
+                                              placeholder="Password" />
 
-    <br />
-    
-    <h2>@ViewBag.log</h2>
-    <button type="submit">Log In</button>
-</form>
+                    <br />
 
+                    <h2>@ViewBag.log</h2>
+                    <button type="submit" class="btn btn-info">Log In</button>
+                </form>
+            </div>
+            <div class="col-lg-4"></div>
+        </center>
+        </header>
+    </body>
+</html>
