--- a/EducationPlatform/Views/A_Mentor/MentorList.cshtml
+++ b/EducationPlatform/Views/A_Mentor/MentorList.cshtml
@@ -3,49 +3,65 @@
     ViewBag.Title = "MentorList";
 }
 
-<h2>MentorList</h2>
-
-<a class="btn btn-primary" href="~/A_Mentor/MentorAdd" role="button">Add</a>
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Name</th>
-            <th scope="col">Adress</th>
-            <th scope="col">Email</th>
-            <th scope="col">Phone</th>
-            <th scope="col">Password</th>
-            <th scope="col">Photo</th>
-            <th scope="col">Gender</th>
-            <th scope="col">Instituiton</th>
-            <th scope="col">Status</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var p in Model)
-        {
-
-            <tr>
-                <th scope="row">@p.Id</th>
-                <td>@p.Name</td>
-                <td>@p.Address</td>
-                <td>@p.Email</td>
-                <td>@p.Phone</td>
-                <td>@p.Password</td>
-                <td>@p.Photo</td>
-                <td>@p.Gender</td>
-                <td>@p.Institution</td>
-                <td>@p.IsValid</td>
-                <td>
-
-                    <a class="btn btn-primary" href="#" role="button">Update</a>
-
-                    <a class="btn btn-primary" href="~/A_Mentor/MentorDelete/@p.Id" role="button">Delete</a>
-                </td>
-            </tr>
-        }
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
 
 
-    </tbody>
 
-</table>
+        <h2>MentorList</h2>
+
+        <a class="btn btn-primary" href="~/A_Mentor/MentorAdd" role="button">Add Mentor</a>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Adress</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Phone</th>
+                    <th scope="col">Password</th>
+                    <th scope="col">Photo</th>
+                    <th scope="col">Gender</th>
+                    <th scope="col">Instituiton</th>
+                    <th scope="col">Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var p in Model)
+                {
+
+                    <tr>
+                        <th scope="row">@p.Id</th>
+                        <td>@p.Name</td>
+                        <td>@p.Address</td>
+                        <td>@p.Email</td>
+                        <td>@p.Phone</td>
+                        <td>@p.Password</td>
+                        <td>@p.Photo</td>
+                        <td>@p.Gender</td>
+                        <td>@p.Institution</td>
+                        <td>@p.IsValid</td>
+                        <td>
+
+                            <a class="btn btn-primary" href="#" role="button">Update</a>
+
+                            <a class="btn btn-danger" href="~/A_Mentor/MentorDelete/@p.Id" role="button">Delete</a>
+                        </td>
+                    </tr>
+                }
+
+
+            </tbody>
+
+        </table>
+        </header>
+    </body>
+</html>
