--- a/EducationPlatform/Views/A_Institution/Index.cshtml
+++ b/EducationPlatform/Views/A_Institution/Index.cshtml
@@ -25,6 +25,12 @@
             <a href="~/A_Student/InstitutionStudentList" class="btn btn-success">See Students & Transactions</a>
             <a href="~/A_Institution/InstitutionOfferedCourse" class="btn btn-warning">Offer Course</a>
             <a href="~/A_Institution/InstitutionSalesReport" class="btn btn-primary">Sales Report</a>
+            <a href="~/A_Institution/InstitutionRegistration" class="btn btn-info">Registration</a>
+            <br />
+            
+            <center><a href="~/A_Institution/InstitutionLogOut" class="btn btn-danger">Log Out</a> </center>
+
+
 
         </center>
         </header>
