--- a/EducationPlatform/Views/A_Institution/InstitutionRegistration.cshtml
+++ b/EducationPlatform/Views/A_Institution/InstitutionRegistration.cshtml
@@ -3,21 +3,42 @@
     ViewBag.Title = "InstitutionRegistration";
 }
 
-<h2>InstitutionRegistration</h2>
-<form action="" method="post">
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title></title>
+</head>
+<body>
+    <header>
+        <center>
 
-    <h4>Name</h4>  <input type="text" value="@(Model!= null ? Model.Name:"")" name="Name" class="form-control" />
+            <h2>Institution Registration</h2>
+            <br />
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6">
+                <form action="" method="post">
 
-    <h4>Address</h4>  <input type="text" value="@(Model!= null ? Model.Address:"")" name="Address" class="form-control" />
+                    <h4>Name</h4>  <input type="text" value="@(Model!= null ? Model.Name:"")" name="Name" class="form-control" placeholder="Name"/>
 
-    <h4>Email</h4>  <input type="email" value="@(Model != null ? Model.Email:"")" name="Email" class=" form-control" />
-    <h4>Phone</h4>  <input type="text" value="@(Model != null ? Model.Phone:"")" name="Phone" class=" form-control" />
-    <h4>Password</h4>  <input type="password" name="Password" class=" form-control" />
-    <h4>Website Link</h4>  <input type="url" value="@(Model != null ? Model.WebsiteLink:"")" name="WebsiteLink" class=" form-control" />
-    <!--   <h4>Status</h4>  <input type="text" value="@(Model != null ? Model.IsValid:"")" name="IsValid" class=" form-control" /> -->
-    <br />
-    <button type="submit">Submit</button>
-</form>
+                    <h4>Address</h4>  <input type="text" value="@(Model!= null ? Model.Address:"")" name="Address" class="form-control" placeholder="Address" />
+
+                    <h4>Email</h4>  <input type="email" value="@(Model != null ? Model.Email:"")" name="Email" class=" form-control" placeholder="Email"/>
+                    <h4>Phone</h4>  <input type="text" value="@(Model != null ? Model.Phone:"")" name="Phone" class=" form-control" placeholder="Phone" />
+                    <h4>Password</h4>  <input type="password" name="Password" class=" form-control" placeholder="Password" />
+                    <h4>Website Link</h4>  <input type="url" value="@(Model != null ? Model.WebsiteLink:"")" name="WebsiteLink" class=" form-control" placeholder="Website Link"/>
+                    <!--   <h4>Status</h4>  <input type="text" value="@(Model != null ? Model.IsValid:"")" name="IsValid" class=" form-control" /> -->
+                    <br />
+                    <button type="submit" class=" btn btn-success">Submit</button>
+                </form>
+            </div>
+            <div class="col-lg-3"></div>
+        </center>
+        </header>
+    </body>
+</html>
 
 
 
